[package]
name = "connx"
version = "0.1.1"
edition = "2021"
authors = ["MDGSF <mdgsf@qq.com>"]
license = "MIT"
description = "toolkit for coding"
homepage = "https://github.com/MDGSF/connx"
documentation = "https://docs.rs/connx"
repository = "https://github.com/MDGSF/connx"
readme = "README.md"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_base64"
path = "benches/encoding/base64/base64.rs"
harness = false

[[bench]]
name = "bench_base32"
path = "benches/encoding/base32/base32.rs"
harness = false
